--- a/bin/ui/main-window.fxml
+++ b/bin/ui/main-window.fxml
@@ -2,22 +2,52 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="160.0" fitWidth="200.0" layoutX="200.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="160.0" fitWidth="200.0" layoutX="200.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../Desktop/Wu-Prime.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="170.0" layoutY="216.0" text="Empresa:" />
-      <TextField fx:id="businesstxt" layoutX="234.0" layoutY="211.0" />
-      <Label layoutX="170.0" layoutY="254.0" text="P" />
-      <TextField layoutX="234.0" layoutY="249.0" />
-      <Button layoutX="290.0" layoutY="297.0" mnemonicParsing="false" onAction="#loadProcessWindow" text="Ingresar" />
+      <Label layoutX="160.0" layoutY="217.0" text="Empresa:">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font></Label>
+      <TextField fx:id="businesstxt" layoutX="240.0" layoutY="210.0" prefHeight="30.0" prefWidth="190.0">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font></TextField>
+      <Label layoutX="160.0" layoutY="257.0" text="Periodo:">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font></Label>
+      <Button layoutX="260.0" layoutY="300.0" mnemonicParsing="false" onAction="#signIn" prefHeight="30.0" prefWidth="80.0" text="Ingresar">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font></Button>
+      <Separator layoutX="200.0" layoutY="290.0" prefWidth="200.0" />
+      <Button layoutX="304.0" layoutY="350.0" mnemonicParsing="false" onAction="#loadConcepts" prefHeight="30.0" prefWidth="96.0" text="Conceptos">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font>
+      </Button>
+      <Separator layoutX="200.0" layoutY="340.0" prefWidth="200.0" />
+      <Button layoutX="200.0" layoutY="350.0" mnemonicParsing="false" onAction="#loadInstructions" prefHeight="30.0" prefWidth="96.0" text="Uso">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font>
+      </Button>
+      <TextField fx:id="periodotxt" layoutX="240.0" layoutY="251.0" prefHeight="30.0" prefWidth="190.0">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
