--- a/bin/ui/pp-pop-up.fxml
+++ b/bin/ui/pp-pop-up.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<DialogPane onMouseClicked="#hello" prefHeight="230.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<DialogPane prefHeight="230.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="185.0" prefWidth="300.0">
          <children>
@@ -38,28 +38,28 @@
                   <Font name="Arial" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="transferCosttxt" layoutX="160.0" layoutY="35.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="transferCosttxt" layoutX="160.0" layoutY="35.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cMDtxt" layoutX="160.0" layoutY="75.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cMDtxt" layoutX="160.0" layoutY="75.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cMODtxt" layoutX="160.0" layoutY="115.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cMODtxt" layoutX="160.0" layoutY="115.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cCIFtxt" layoutX="160.0" layoutY="155.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cCIFtxt" layoutX="160.0" layoutY="155.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
             <Separator layoutX="50.0" layoutY="191.0" prefWidth="200.0" />
-            <Button layoutX="105.0" layoutY="197.0" mnemonicParsing="false" onAction="#ppExtraInfo" prefHeight="30.0" prefWidth="90.0" text="PP">
+            <Button layoutX="105.0" layoutY="197.0" mnemonicParsing="false" onAction="#methodPP" prefHeight="30.0" prefWidth="90.0" text="PP">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
