--- a/src/ui/main-window.fxml
+++ b/src/ui/main-window.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -25,16 +24,15 @@
          <font>
             <Font name="Arial" size="15.0" />
          </font></TextField>
-      <Label layoutX="160.0" layoutY="257.0" text="Password:">
+      <Label layoutX="160.0" layoutY="257.0" text="Periodo:">
          <font>
             <Font name="Arial" size="15.0" />
          </font></Label>
-      <Button layoutX="260.0" layoutY="300.0" mnemonicParsing="false" onAction="#loadProcessWindow" prefHeight="30.0" prefWidth="80.0" text="Ingresar">
+      <Button layoutX="260.0" layoutY="300.0" mnemonicParsing="false" onAction="#signIn" prefHeight="30.0" prefWidth="80.0" text="Ingresar">
          <font>
             <Font name="Arial" size="15.0" />
          </font></Button>
       <Separator layoutX="200.0" layoutY="290.0" prefWidth="200.0" />
-      <PasswordField layoutX="240.0" layoutY="250.0" prefHeight="30.0" prefWidth="190.0" />
       <Button layoutX="304.0" layoutY="350.0" mnemonicParsing="false" onAction="#loadConcepts" prefHeight="30.0" prefWidth="96.0" text="Conceptos">
          <font>
             <Font name="Arial" size="15.0" />
@@ -46,5 +44,10 @@
             <Font name="Arial" size="15.0" />
          </font>
       </Button>
+      <TextField fx:id="periodotxt" layoutX="240.0" layoutY="251.0" prefHeight="30.0" prefWidth="190.0">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
