--- a/src/ui/pp-pop-up.fxml
+++ b/src/ui/pp-pop-up.fxml
@@ -38,22 +38,22 @@
                   <Font name="Arial" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="transferCosttxt" layoutX="160.0" layoutY="35.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="transferCosttxt" layoutX="160.0" layoutY="35.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cMDtxt" layoutX="160.0" layoutY="75.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cMDtxt" layoutX="160.0" layoutY="75.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cMODtxt" layoutX="160.0" layoutY="115.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cMODtxt" layoutX="160.0" layoutY="115.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="cCIFtxt" layoutX="160.0" layoutY="155.0" prefHeight="30.0" prefWidth="110.0">
+            <TextField fx:id="cCIFtxt" layoutX="160.0" layoutY="155.0" prefHeight="30.0" prefWidth="110.0" promptText="\$">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
