--- a/bin/ui/process-window.fxml
+++ b/bin/ui/process-window.fxml
@@ -4,11 +4,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imgs/background.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="30.0" layoutY="86.0" text="PP:">
          <font>
             <Font name="Arial" size="15.0" />
@@ -178,7 +185,7 @@
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Label>
-      <Label fx:id="businesslbl" layoutX="95.0" layoutY="15.0" text="Empty">
+      <Label fx:id="businesslbl" layoutX="95.0" layoutY="15.0">
          <font>
             <Font name="Arial" size="15.0" />
          </font>
